fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -62,10 +62,22 @@ box-shadow: 0 2px 8px rgba(0, 0,0, 0.2);
 .react-datepicker__day--names{
   background-color:#007bff ;
 }
-.react-datepicker__year--selected{
-  background-color:#007bff ;
-  color: black;
+
+
+
+/* Hide scrollbar for all elements */
+* {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer and Edge */
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+    display: none; /* Hides scrollbar */
+}
+
+
+
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
